# 4c-project-structure

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  conanfile.txt  docker-compose.yml
.github/workflows/: ci.yml
app/: CMakeLists.txt
lib/: CMakeLists.txt
scripts/: entrypoint.sh
test/: CMakeLists.txt  TestDummy.cpp  main.cpp
